// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders correctly with custom background color 1`] = `
<DocumentFragment>
  .cache-hjx5aa-AvatarContainer {
  height: 32px;
  width: 32px;
}

.cache-1whnewf-StyledTextAvatar {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 100%;
  color: #ffffff;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="cache-hjx5aa-AvatarContainer ec0473m0"
    size="32"
  >
    <span
      class="cache-1whnewf-StyledTextAvatar ec0473m1"
    >
      HW
    </span>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with custom text color 1`] = `
<DocumentFragment>
  .cache-hjx5aa-AvatarContainer {
  height: 32px;
  width: 32px;
}

.cache-1htqhnw-StyledTextAvatar {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b824f9;
  border-radius: 100%;
  color: #FFFFFF;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="cache-hjx5aa-AvatarContainer ec0473m0"
    size="32"
  >
    <span
      class="cache-1htqhnw-StyledTextAvatar ec0473m1"
    >
      HW
    </span>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with default props 1`] = `
<DocumentFragment>
  .cache-hjx5aa-AvatarContainer {
  height: 32px;
  width: 32px;
}

<div
    class="cache-hjx5aa-AvatarContainer ec0473m0"
    size="32"
  >
    <img
      alt=""
      height="100%"
      src="test-file-stub"
      width="100%"
    />
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with lock 1`] = `
<DocumentFragment>
  .cache-hjx5aa-AvatarContainer {
  height: 32px;
  width: 32px;
}

.cache-1lc61rv-StyledTextAvatar {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #e9eaeb;
  border-radius: 100%;
  color: #ffffff;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

.cache-n8p420-sizeStyles {
  vertical-align: middle;
  fill: #727683;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-n8p420-sizeStyles .fillStroke {
  stroke: #727683;
  fill: none;
}

<div
    class="cache-hjx5aa-AvatarContainer ec0473m0"
    size="32"
  >
    <span
      class="cache-1lc61rv-StyledTextAvatar ec0473m1"
    >
      <svg
        class="cache-n8p420-sizeStyles e1gt4cfo0"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M10 2.5a3.75 3.75 0 0 0-3.75 3.75v2.917h-.417c-.92 0-1.666.746-1.666 1.666v5c0 .92.746 1.667 1.666 1.667h8.334c.92 0 1.666-.746 1.666-1.667v-5c0-.92-.746-1.666-1.666-1.666h-.417V6.25A3.75 3.75 0 0 0 10 2.5m2.5 6.667V6.25a2.5 2.5 0 0 0-5 0v2.917z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with sentence 1`] = `
<DocumentFragment>
  .cache-hjx5aa-AvatarContainer {
  height: 32px;
  width: 32px;
}

.cache-rma379-StyledTextAvatar {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b824f9;
  border-radius: 100%;
  color: #ffffff;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="cache-hjx5aa-AvatarContainer ec0473m0"
    size="32"
  >
    <span
      class="cache-rma379-StyledTextAvatar ec0473m1"
    >
      HW
    </span>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with size 1`] = `
<DocumentFragment>
  .cache-xgtog4-AvatarContainer {
  height: 48px;
  width: 48px;
}

<div
    class="cache-xgtog4-AvatarContainer ec0473m0"
    size="48"
  >
    <img
      alt=""
      height="100%"
      src="test-file-stub"
      width="100%"
    />
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with small text 1`] = `
<DocumentFragment>
  .cache-hjx5aa-AvatarContainer {
  height: 32px;
  width: 32px;
}

.cache-rma379-StyledTextAvatar {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b824f9;
  border-radius: 100%;
  color: #ffffff;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="cache-hjx5aa-AvatarContainer ec0473m0"
    size="32"
  >
    <span
      class="cache-rma379-StyledTextAvatar ec0473m1"
    >
      HW
    </span>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with text 1`] = `
<DocumentFragment>
  .cache-hjx5aa-AvatarContainer {
  height: 32px;
  width: 32px;
}

.cache-rma379-StyledTextAvatar {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b824f9;
  border-radius: 100%;
  color: #ffffff;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="cache-hjx5aa-AvatarContainer ec0473m0"
    size="32"
  >
    <span
      class="cache-rma379-StyledTextAvatar ec0473m1"
    >
      HE
    </span>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with text and custom style 1`] = `
<DocumentFragment>
  .cache-hjx5aa-AvatarContainer {
  height: 32px;
  width: 32px;
}

.cache-14vatin-StyledTextAvatar {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: red;
  border-radius: 100%;
  color: white;
  font-size: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="cache-hjx5aa-AvatarContainer ec0473m0"
    size="32"
  >
    <span
      class="cache-14vatin-StyledTextAvatar ec0473m1"
    >
      HW
    </span>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with text size 1`] = `
<DocumentFragment>
  .cache-1yyml98-AvatarContainer {
  height: 50px;
  width: 50px;
}

.cache-1pv5uzr-StyledTextAvatar {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b824f9;
  border-radius: 100%;
  color: #ffffff;
  font-size: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="cache-1yyml98-AvatarContainer ec0473m0"
    size="50"
  >
    <span
      class="cache-1pv5uzr-StyledTextAvatar ec0473m1"
    >
      HE
    </span>
  </div>
</DocumentFragment>
`;
